Set per page as part of data Fix spans whitespace

--- a/src/components/data-table/data-table.scss
+++ b/src/components/data-table/data-table.scss
@@ -67,6 +67,10 @@ table {
     min-width: 90px;
     white-space: nowrap;
 
+    span {
+      white-space: normal;
+    }
+
     &:first-child {
       padding-left: 0;
     }
